[tool.poetry]
name = "dc-avro"
version = "0.6.2"
description = ""
authors = ["Marcos Schroh <marcos.schroh@kpn.com>"]
readme = "README.md"
packages = [{include = "dc_avro"}]
license = "MIT"
keywords = ["avro", "avro schemas", "dataclasses", "dataclasses-avroschema", "pydantic"]
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: System :: Networking",
    "Topic :: System :: Distributed Computing",
]

[tool.poetry.dependencies]
python = "^3.7"
aiofiles = "^22.1.0" # remove this
httpx = "^0.23.3"
dataclasses-avroschema = "^0.37.1"
typer = {extras = ["all"], version = "^0.7.0"}
deepdiff = "^6.2.3"

[tool.poetry.group.dev.dependencies]
commitizen = "^2.39.1"
ruff = "^0.0.238"
black = "^22.12.0"
mypy = "^0.991"
mkdocs = "^1.4.2"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
mkdocs-material = "^9.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dc-avro = "dc_avro.main:app"

[tool.ruff]
line-length = 88
select = [
    # Pyflakes
    "F",
    # isort
    "I001"
]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    ".venv",
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.commitizen]
version = "0.6.2"
tag_format = "$version"
version_files = [
    "pyproject.toml:version",
]
update_changelog_on_bump = true
major_version_zero = true

# After adding the file .pyi stub files we can remove this
[[tool.mypy.overrides]]
module = "dataclasses_avroschema"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "deepdiff"
ignore_missing_imports = true
