[tool.poetry]
name = "dc-avro"
version = "0.12.2"
description = ""
authors = ["Marcos Schroh <marcos.schroh@kpn.com>"]
readme = "README.md"
packages = [{include = "dc_avro"}]
license = "MIT"
keywords = ["avro", "schemas", "dataclasses", "pydantic", "lint"]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: System :: Networking",
    "Topic :: System :: Distributed Computing",
]

[tool.poetry.dependencies]
python = "^3.9"
aiofiles = ">=24.1.0,<25.0" # remove this
httpx = ">=0.23.3,<0.29.0"
dataclasses-avroschema = ">=0.57.2"
typer = {extras = ["all"], version = ">=0.9,<0.17"}
deepdiff = ">=6.2.3,<9.0.0"
truststore = {version = "^0.10.1", python = "^3.10"}

[tool.poetry.group.dev.dependencies]
commitizen = "^4.8.3"
ruff = ">=0.5.0,<0.13"
mypy = "^1"
mkdocs = "^1.4.2"
pytest = ">=7.2,<9.0"
pytest-cov = ">=4,<7"
mkdocs-material = "^9.6.14"
types-attrs = "^19.1.0"

mkdocs-video = "^1.5.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dc-avro = "dc_avro.main:app"

[tool.ruff.lint]
ignore = ["E402"]
fixable = ["ALL"]
unfixable = []
select = [
    # pycodestyle"
    "E4",
    "E7",
    "E9",
    "E501",
    # Pyflakes
    "F",
    # isort
    "I001"
]

[tool.ruff.lint.extend-per-file-ignores]
"tests/test_cli.py" = ["E501"]
"tests/conftest.py" = ["E501"]
"tests/test_schema_utils.py" = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.commitizen]
version_provider = "poetry"
tag_format = "$version"
update_changelog_on_bump = true
major_version_zero = true

# After adding the file .pyi stub files we can remove this
[[tool.mypy.overrides]]
module = "dataclasses_avroschema"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "deepdiff"
ignore_missing_imports = true
